subbed the links from codepen to github

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
    <h2>These are some of the projects I have done using HTML and CSS</h2>
   <div id="container" class="project-tile">
     <div id="item1" class="tile">
-      <a href="https://codepen.io/kanu99/full/JjGWpmE" target="_blank" class="pro-link">
+      <a href="https://kanu99.github.io/Piccolos-Pizza/" target="_blank" class="pro-link">
       <img src="Piccolos.png" alt="" class="project-image">
       <p>Piccolo's Product Landing Page</p>
     </a>
     </div>
     <div id="item3" class="tile">
-      <a href="https://codepen.io/kanu99/full/yLebxMX" target="_blank" class="pro-link">
+      <a href="https://kanu99.github.io/Technical-Documentation-Page/" target="_blank" class="pro-link">
       <img src="Tech.png" alt="" class="project-image">
       <p> HTML Technical Documentation</p>
       </a>
     </div>
     <div id="item2" class="tile">
-      <a href="https://codepen.io/kanu99/full/KKVNZmx" target="_blank" class="pro-link">
+      <a href="https://kanu99.github.io/Thomas-Edison-Tribute-Page/" target="_blank" class="pro-link">
       <img src="Tribute.png" alt="" class="project-image">
       <p>Thomas Edison Tribute Page</p>
     </a>
     </div>
     <div id="item4" class="tile">
-      <a href="https://codepen.io/kanu99/full/zYrNOLZ" target="_blank" class="pro-link">
+      <a href="https://kanu99.github.io/Survey-form/" target="_blank" class="pro-link">
         <img src="Survey.png" alt="" class="project-image">
         <p>Survey Page</p>
       </a>
@@ -76,7 +76,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <a href="https://github.com/Kanu99" target="_blank" id="profile-link" class="c-link"><i class="fab fa-github"></i>Github</a>
   <a href="https://twitter.com/TurbinalKanu" target="_blank" class="c-link"><i class="fab fa-twitter"></i>Twitter</a>
-  <a href="mailto:"example@example.com"" target="_blank" class="c-link"><i class="fas fa-at"></i>E-mail</a>
+  <a href="https://www.freecodecamp.org/kanu99" target="_blank" class="c-link"><i class="fab fa-free-code-camp"></i>FreeCodeCamp</a>
 </div>
 </section>
 <!--  END CONTACT DEETS -->
