fixed grid for bigger screens

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="contact-types">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <a href="https://github.com/Kanu99" target="_blank" id="profile-link" class="c-link"><i class="fab fa-github"></i>Github</a>
-  <a href="https://twitter.com/TurbinalKanu" target="_blank" class="c-link"><i class="fab fa-twitter"></i>Twitter</a>
+ <!-- <a href="https://twitter.com/" target="_blank" class="c-link"><i class="fab fa-twitter"></i>Twitter</a>-->
   <a href="https://www.freecodecamp.org/kanu99" target="_blank" class="c-link"><i class="fab fa-free-code-camp"></i>FreeCodeCamp</a>
 </div>
 </section>
